- various cleanups - Revised linear model framework -- much, much faster, but needs testing